--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,13 @@
 [package]
-name = "whisky-scraper"
+name = "ua-test-data"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-indicatif = "0.17.7"
-reqwest = "0.11.24"
-tokio = { version = "1.36.0", features = ["full"]}
 eyre = "0.6.12"
-postgres = "0.19.7"
-serde = "1.0.196"
-serde_json = "1.0.113"
-iflet = "0.1.0"
+reqwest = "0.11.25"
+serde = { version = "1.0.197", features = ["derive"] } 
+serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["full"] } 
