--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ eyre = "0.6.12"
 reqwest = "0.11.25"
 serde = { version = "1.0.197", features = ["derive"] } 
 serde_json = "1.0.114"
-tokio = { version = "1.36.0", features = ["full"] } 
+tokio = { version = "1.36.0", features = ["full", "rt", "macros"] } 
