--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "ua-test-data"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 eyre = "0.6.12"
+postgres = "0.19.7"
 reqwest = "0.11.25"
 serde = { version = "1.0.197", features = ["derive"] } 
 serde_json = "1.0.114"
