--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 eyre = "0.6.12"
-postgres = "0.19.7"
 reqwest = "0.11.25"
 serde = { version = "1.0.197", features = ["derive"] } 
 serde_json = "1.0.114"
 tokio = { version = "1.36.0", features = ["full", "rt", "macros"] } 
+tokio-postgres = "0.7.10"
 ua-rlib = { git = "https://github.com/Unrated-Limited-Unlimited/ua-rlib", branch = "main" }
