--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = "1.3.3"
 eyre = "0.6.12"
 reqwest = "0.11.25"
 serde = { version = "1.0.197", features = ["derive"] } 
